unpackaged/main/default/objects/SDO_SCOM_OOA_Commerce_Approval_Requests__c/SDO_SCOM_OOA_Commerce_Approval_Requests__c.object-meta.xml
<CustomObject>
    <label>Commerce Approval Request</label>
    <nameField>
        <displayFormat>CARN-{0000}</displayFormat>
        <label>Commerce Approval Request No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commerce Approval Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>