unpackaged/main/default/objects/SDO_SCOM_OOA_Commerce_Approval_Requests__c/fields/Budget_Limit__c.field-meta.xml
<CustomField>
    <fullName>Budget_Limit__c</fullName>
    <formula>Requester__r.Contact.SDO_SCOM_OOA_Budget_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>