unpackaged/main/default/objects/SDO_SCOM_OOA_Commerce_Approval_Requests__c/fields/Cart__c.field-meta.xml
<CustomField>
    <fullName>Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cart</label>
    <referenceTo>WebCart</referenceTo>
    <relationshipLabel>Commerce Approval Requests</relationshipLabel>
    <relationshipName>Commerce_Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>