unpackaged/main/default/objects/SDO_SCOM_OOA_Commerce_Approval_Requests__c/fields/Credit_Override_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Override_Amount__c</fullName>
    <label>Credit Override Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>