unpackaged/main/default/objects/SDO_SCOM_OOA_Commerce_Approval_Requests__c/fields/Products_Quantities__c.field-meta.xml
<CustomField>
    <fullName>Products_Quantities__c</fullName>
    <label>Products/Quantities</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>