unpackaged/main/default/objects/SDO_SCOM_OOA_Commerce_Approval_Requests__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commerce_Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>