unpackaged/main/default/objects/SDO_SCOM_OOA_Commerce_Approval_Requests__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Override</fullName>
            </value>
            <value>
                <fullName>Product/Quantity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>