unpackaged/main/default/objects/SDO_SCOM_OOA_Commerce_Approval_Requests__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Requester__c</columns>
    <columns>Status__c</columns>
    <columns>Products_Quantities__c</columns>
    <columns>Credit_Override_Amount__c</columns>
    <columns>Budget_Limit__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>